Assignment1/src/main/bkool/parser/BKOOLParser.py
# Generated from main/bkool/parser/BKOOL.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKOOLParser ( Parser ):

    grammarFileName = "BKOOL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'return'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "','", "'.'", "';'", "'('", 
                     "')'", "'{'", "'}'", "'+'", "'-'", "'*'", "'/'", "'='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "TYPE", "FLOATLIT", "INTLIT", 
                      "ID", "COMMA", "DOT", "SIMI", "LP", "RP", "LB", "RB", 
                      "ADD", "SUB", "MUL", "DIV", "ASSIGN", "WS", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decl = 1
    RULE_vardecl = 2
    RULE_funcdecl = 3
    RULE_funcDeclParams = 4
    RULE_listFuncDeclParams = 5
    RULE_listVardecl = 6
    RULE_body = 7
    RULE_listStmt = 8
    RULE_funcCall = 9
    RULE_expr = 10
    RULE_term = 11
    RULE_factor = 12
    RULE_assignment = 13
    RULE_funcCallStmt = 14
    RULE_retStmt = 15
    RULE_funcCallParams = 16
    RULE_listFuncCallParams = 17
    RULE_stmt = 18

    ruleNames =  [ "program", "decl", "vardecl", "funcdecl", "funcDeclParams", 
                   "listFuncDeclParams", "listVardecl", "body", "listStmt", 
                   "funcCall", "expr", "term", "factor", "assignment", "funcCallStmt", 
                   "retStmt", "funcCallParams", "listFuncCallParams", "stmt" ]

    EOF = Token.EOF
    T__0=1
    TYPE=2
    FLOATLIT=3
    INTLIT=4
    ID=5
    COMMA=6
    DOT=7
    SIMI=8
    LP=9
    RP=10
    LB=11
    RB=12
    ADD=13
    SUB=14
    MUL=15
    DIV=16
    ASSIGN=17
    WS=18
    ERROR_CHAR=19

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKOOLParser.EOF, 0)

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.DeclContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.DeclContext,i)


        def getRuleIndex(self):
            return BKOOLParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKOOLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 38
                self.decl()
                self.state = 41 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==BKOOLParser.TYPE):
                    break

            self.state = 43
            self.match(BKOOLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(BKOOLParser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(BKOOLParser.FuncdeclContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_decl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = BKOOLParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 47
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 45
                self.vardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 46
                self.funcdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(BKOOLParser.TYPE, 0)

        def listVardecl(self):
            return self.getTypedRuleContext(BKOOLParser.ListVardeclContext,0)


        def SIMI(self):
            return self.getToken(BKOOLParser.SIMI, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = BKOOLParser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_vardecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(BKOOLParser.TYPE)
            self.state = 50
            self.listVardecl()
            self.state = 51
            self.match(BKOOLParser.SIMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(BKOOLParser.TYPE, 0)

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def LP(self):
            return self.getToken(BKOOLParser.LP, 0)

        def funcDeclParams(self):
            return self.getTypedRuleContext(BKOOLParser.FuncDeclParamsContext,0)


        def RP(self):
            return self.getToken(BKOOLParser.RP, 0)

        def body(self):
            return self.getTypedRuleContext(BKOOLParser.BodyContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_funcdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdecl" ):
                return visitor.visitFuncdecl(self)
            else:
                return visitor.visitChildren(self)




    def funcdecl(self):

        localctx = BKOOLParser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_funcdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(BKOOLParser.TYPE)
            self.state = 54
            self.match(BKOOLParser.ID)
            self.state = 55
            self.match(BKOOLParser.LP)
            self.state = 56
            self.funcDeclParams()
            self.state = 57
            self.match(BKOOLParser.RP)
            self.state = 58
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(BKOOLParser.TYPE, 0)

        def listVardecl(self):
            return self.getTypedRuleContext(BKOOLParser.ListVardeclContext,0)


        def listFuncDeclParams(self):
            return self.getTypedRuleContext(BKOOLParser.ListFuncDeclParamsContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_funcDeclParams

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDeclParams" ):
                return visitor.visitFuncDeclParams(self)
            else:
                return visitor.visitChildren(self)




    def funcDeclParams(self):

        localctx = BKOOLParser.FuncDeclParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_funcDeclParams)
        try:
            self.state = 65
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.TYPE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.match(BKOOLParser.TYPE)
                self.state = 61
                self.listVardecl()
                self.state = 62
                self.listFuncDeclParams()
                pass
            elif token in [BKOOLParser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListFuncDeclParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SIMI(self):
            return self.getToken(BKOOLParser.SIMI, 0)

        def TYPE(self):
            return self.getToken(BKOOLParser.TYPE, 0)

        def listVardecl(self):
            return self.getTypedRuleContext(BKOOLParser.ListVardeclContext,0)


        def listFuncDeclParams(self):
            return self.getTypedRuleContext(BKOOLParser.ListFuncDeclParamsContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_listFuncDeclParams

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListFuncDeclParams" ):
                return visitor.visitListFuncDeclParams(self)
            else:
                return visitor.visitChildren(self)




    def listFuncDeclParams(self):

        localctx = BKOOLParser.ListFuncDeclParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_listFuncDeclParams)
        try:
            self.state = 73
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.SIMI]:
                self.enterOuterAlt(localctx, 1)
                self.state = 67
                self.match(BKOOLParser.SIMI)
                self.state = 68
                self.match(BKOOLParser.TYPE)
                self.state = 69
                self.listVardecl()
                self.state = 70
                self.listFuncDeclParams()
                pass
            elif token in [BKOOLParser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListVardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def listVardecl(self):
            return self.getTypedRuleContext(BKOOLParser.ListVardeclContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_listVardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListVardecl" ):
                return visitor.visitListVardecl(self)
            else:
                return visitor.visitChildren(self)




    def listVardecl(self):

        localctx = BKOOLParser.ListVardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_listVardecl)
        try:
            self.state = 79
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 75
                self.match(BKOOLParser.ID)
                self.state = 76
                self.match(BKOOLParser.COMMA)
                self.state = 77
                self.listVardecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.match(BKOOLParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(BKOOLParser.LB, 0)

        def listStmt(self):
            return self.getTypedRuleContext(BKOOLParser.ListStmtContext,0)


        def retStmt(self):
            return self.getTypedRuleContext(BKOOLParser.RetStmtContext,0)


        def RB(self):
            return self.getToken(BKOOLParser.RB, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = BKOOLParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(BKOOLParser.LB)
            self.state = 82
            self.listStmt()
            self.state = 83
            self.retStmt()
            self.state = 84
            self.match(BKOOLParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(BKOOLParser.StmtContext,0)


        def listStmt(self):
            return self.getTypedRuleContext(BKOOLParser.ListStmtContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_listStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListStmt" ):
                return visitor.visitListStmt(self)
            else:
                return visitor.visitChildren(self)




    def listStmt(self):

        localctx = BKOOLParser.ListStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_listStmt)
        try:
            self.state = 90
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.TYPE, BKOOLParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.stmt()
                self.state = 87
                self.listStmt()
                pass
            elif token in [BKOOLParser.T__0]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncCallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def LP(self):
            return self.getToken(BKOOLParser.LP, 0)

        def funcCallParams(self):
            return self.getTypedRuleContext(BKOOLParser.FuncCallParamsContext,0)


        def RP(self):
            return self.getToken(BKOOLParser.RP, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_funcCall

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncCall" ):
                return visitor.visitFuncCall(self)
            else:
                return visitor.visitChildren(self)




    def funcCall(self):

        localctx = BKOOLParser.FuncCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_funcCall)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(BKOOLParser.ID)
            self.state = 93
            self.match(BKOOLParser.LP)
            self.state = 94
            self.funcCallParams()
            self.state = 95
            self.match(BKOOLParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term(self):
            return self.getTypedRuleContext(BKOOLParser.TermContext,0)


        def expr(self):
            return self.getTypedRuleContext(BKOOLParser.ExprContext,0)


        def DIV(self):
            return self.getToken(BKOOLParser.DIV, 0)

        def MUL(self):
            return self.getToken(BKOOLParser.MUL, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = BKOOLParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.term()
            self._ctx.stop = self._input.LT(-1)
            self.state = 108
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 106
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                    if la_ == 1:
                        localctx = BKOOLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 100
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 101
                        self.match(BKOOLParser.DIV)
                        self.state = 102
                        self.term()
                        pass

                    elif la_ == 2:
                        localctx = BKOOLParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 103
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 104
                        self.match(BKOOLParser.MUL)
                        self.state = 105
                        self.term()
                        pass

             
                self.state = 110
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class TermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.FactorContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.FactorContext,i)


        def ADD(self):
            return self.getToken(BKOOLParser.ADD, 0)

        def term(self):
            return self.getTypedRuleContext(BKOOLParser.TermContext,0)


        def SUB(self):
            return self.getToken(BKOOLParser.SUB, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_term

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm" ):
                return visitor.visitTerm(self)
            else:
                return visitor.visitChildren(self)




    def term(self):

        localctx = BKOOLParser.TermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_term)
        try:
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.factor()
                self.state = 112
                self.match(BKOOLParser.ADD)
                self.state = 113
                self.term()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.factor()
                self.state = 116
                self.match(BKOOLParser.SUB)
                self.state = 117
                self.factor()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 119
                self.factor()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FactorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(BKOOLParser.LP, 0)

        def expr(self):
            return self.getTypedRuleContext(BKOOLParser.ExprContext,0)


        def RP(self):
            return self.getToken(BKOOLParser.RP, 0)

        def INTLIT(self):
            return self.getToken(BKOOLParser.INTLIT, 0)

        def FLOATLIT(self):
            return self.getToken(BKOOLParser.FLOATLIT, 0)

        def funcCall(self):
            return self.getTypedRuleContext(BKOOLParser.FuncCallContext,0)


        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_factor

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFactor" ):
                return visitor.visitFactor(self)
            else:
                return visitor.visitChildren(self)




    def factor(self):

        localctx = BKOOLParser.FactorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_factor)
        try:
            self.state = 130
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.match(BKOOLParser.LP)
                self.state = 123
                self.expr(0)
                self.state = 124
                self.match(BKOOLParser.RP)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.match(BKOOLParser.INTLIT)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 127
                self.match(BKOOLParser.FLOATLIT)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 128
                self.funcCall()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 129
                self.match(BKOOLParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(BKOOLParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(BKOOLParser.ExprContext,0)


        def SIMI(self):
            return self.getToken(BKOOLParser.SIMI, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_assignment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment" ):
                return visitor.visitAssignment(self)
            else:
                return visitor.visitChildren(self)




    def assignment(self):

        localctx = BKOOLParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(BKOOLParser.ID)
            self.state = 133
            self.match(BKOOLParser.ASSIGN)
            self.state = 134
            self.expr(0)
            self.state = 135
            self.match(BKOOLParser.SIMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncCallStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcCall(self):
            return self.getTypedRuleContext(BKOOLParser.FuncCallContext,0)


        def SIMI(self):
            return self.getToken(BKOOLParser.SIMI, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_funcCallStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncCallStmt" ):
                return visitor.visitFuncCallStmt(self)
            else:
                return visitor.visitChildren(self)




    def funcCallStmt(self):

        localctx = BKOOLParser.FuncCallStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_funcCallStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.funcCall()
            self.state = 138
            self.match(BKOOLParser.SIMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RetStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(BKOOLParser.ExprContext,0)


        def SIMI(self):
            return self.getToken(BKOOLParser.SIMI, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_retStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRetStmt" ):
                return visitor.visitRetStmt(self)
            else:
                return visitor.visitChildren(self)




    def retStmt(self):

        localctx = BKOOLParser.RetStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_retStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(BKOOLParser.T__0)
            self.state = 141
            self.expr(0)
            self.state = 142
            self.match(BKOOLParser.SIMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncCallParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(BKOOLParser.ExprContext,0)


        def listFuncCallParams(self):
            return self.getTypedRuleContext(BKOOLParser.ListFuncCallParamsContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_funcCallParams

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncCallParams" ):
                return visitor.visitFuncCallParams(self)
            else:
                return visitor.visitChildren(self)




    def funcCallParams(self):

        localctx = BKOOLParser.FuncCallParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_funcCallParams)
        try:
            self.state = 148
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.FLOATLIT, BKOOLParser.INTLIT, BKOOLParser.ID, BKOOLParser.LP]:
                self.enterOuterAlt(localctx, 1)
                self.state = 144
                self.expr(0)
                self.state = 145
                self.listFuncCallParams()
                pass
            elif token in [BKOOLParser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListFuncCallParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def expr(self):
            return self.getTypedRuleContext(BKOOLParser.ExprContext,0)


        def listFuncCallParams(self):
            return self.getTypedRuleContext(BKOOLParser.ListFuncCallParamsContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_listFuncCallParams

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListFuncCallParams" ):
                return visitor.visitListFuncCallParams(self)
            else:
                return visitor.visitChildren(self)




    def listFuncCallParams(self):

        localctx = BKOOLParser.ListFuncCallParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_listFuncCallParams)
        try:
            self.state = 155
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKOOLParser.COMMA]:
                self.enterOuterAlt(localctx, 1)
                self.state = 150
                self.match(BKOOLParser.COMMA)
                self.state = 151
                self.expr(0)
                self.state = 152
                self.listFuncCallParams()
                pass
            elif token in [BKOOLParser.RP]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
